--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -71,8 +71,8 @@ Il presente documento descrive l'anailisi dei costi e delle risorse effettuata d
 
 \section*{\Large Redazione:}
 	\begin{elencopuntato}[\normindent]
-		\item[-] Dal Bosco Davide
-		\item[-] Cunico Marco
+		\item Dal Bosco Davide
+		\item Cunico Marco
 	\end{elencopuntato}
 
 \section*{\Large Approvazione:}
@@ -85,9 +85,8 @@ Il presente documento descrive l'anailisi dei costi e delle risorse effettuata d
 \section*{\LARGE Lista di Distribuzione:}
 
 	\begin{elenconumerato}{\normindent}
-		\item WebShape \footnote{Il termine WebShape designa una collettivit\`a di individui come da organigramma contenuto nel piano di progetto fornito in allegato al presente documento}
+		\item WebShape 
 		\item I committenti Vardanega Tullio e Conte Renato in rappresentanza \\  dell'azienda proponente Zucchetti SPA
-		%\item Il committente Conte Renato
 	\end{elenconumerato}
 
 \newpage
@@ -145,10 +144,15 @@ I ruoli saranno assegnati a rotazione nell'arco dello sviluppo del progetto, in 
 		 \textbf{Cognome e Nome} & \textbf{Data} & \textbf{Firma}\\
 		 \hline
 		Bizzotto Piero & 15-10-2008 & \\
+		\hline
 		Carollo Mirko & 15-10-2008 & \\
+		\hline
 		Cunico Marco & 15-10-2008 & \\
+		\hline
 		Dal Bosco Davide & 15-10-2008 & \\
+		\hline
 		Dissegna Stefano & 15-10-2008 & \\
+		\hline
 		Geremia Mirco & 15-10-2008 & \\
 		\hline
 		\end{tabular}
