corretto errore ortografico SF

--- a/doc/StudioFattibilita/StudioDiFattibilita.tex
+++ b/doc/StudioFattibilita/StudioDiFattibilita.tex
@@ -142,7 +142,7 @@ Software per il Disegno Grafico in Tecnologie Web (in sigla AJAXDRAW).
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-    	 	0.1 & 	 21$\slash$11$\slash$2008 Aggiornato Fattiblit\`a tecnologica & Mirco Geremia \\
+    	 	0.1 & 	 21$\slash$11$\slash$2008 Aggiornato Fattibilit\`a tecnologica & Mirco Geremia \\
     	 	\hline
     	 	0.0 & 	 19$\slash$11$\slash$2008 Prima bozza & Mirco Geremia \\
 
@@ -172,7 +172,7 @@ Tale scelta si basa prevalentemente sui seguenti punti:
 		\item interesse e capacit\`{a}: i membri del gruppo condividono lo stesso interesse nei confronti delle tecnologie web e delle applicazioni grafiche; inoltre alcuni componenti sono in possesso delle conoscenze necessarie per comprendere a fondo il dominio del problema, in quanto hanno gi\`{a} superato l'esame di Tecnologie Web della Laurea Triennale di Informatica dell'Universit\`{a} di Padova, mentre per gli altri tale esame rappresenta ulteriore stimolo di interesse nei riguardi del progetto.
 		\item aspetto commerciale: il capitolato in oggetto rappresenta secondo il gruppo un buon prodotto 
 		poich\`{e} l'utilizzo del software risulta pi\`{u}  semplice e immediato rispetto alla stessa applicazione desktop	(ad esempio esenta l'utente da oneri come l'installazione e l'aggiornamento del prodotto).
-		E' da notare inoltre l'attuale orientamento del mercato informatico verso le tecnologie web, 
+		\`E da notare inoltre l'attuale orientamento del mercato informatico verso le tecnologie web, 
 		che si stanno indubbiamente rivelando sempre pi\`{u} interessanti.
 		\item fattibilit\`{a} tecnologica: i componenti del gruppo hanno accertato l'esistenza di strumenti software adatti alla realizzazione del progetto: 
 				\begin{elencopuntato}[\normindent]
