Inserimento della sezione Analisi e gestioni dei Rischi

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{0.3} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{0.4} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -107,6 +107,7 @@ Il presente documento descrive l'anailisi dei costi e delle risorse effettuata d
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
+          0.4 & 05/12/2008 Inserimento della sezione relativa all'Analisi e Gestione dei Rischi & Dal Bosco Davide \\
           0.3 & 04/12/2008 Inserimento intero capitolo Pianificazione con relative sottosezioni,tabelle e grafici & Dal Bosco Davide \\
     	  0.2 & 01/12/2008 Inserimento capitoli Introduzione,Organigramma,Pianificazione(inizio) & Dal Bosco Davide \\
     	  0.1 & 25/11/2008 Adattamento al template scelto & Dal Bosco Davide \\
@@ -347,6 +348,21 @@ da completare\\
 \subsezione{Obiettivi}
 da completare\\
 \sezione{Analisi e Gestione dei Rischi}
+In questa sezione saranno presi in considerazione i possibili problemi che potrebbero sorgere durante la realizzazione del progetto, sia dal punto di vista della pianificazione delle fasi di lavoro, che da eventuali rischi relativi alla tecnologia usata.\\
+I punti di rischio da noi identificati e valutati sono i seguenti:
+\begin{itemize}
+\item \textbf{Rischi inerenti al modello di ciclo di vita evolutivo}\\
+\`e molto importante effettuare una corretta scelta delle attivit\`a, da coordinare durante le varie fasi di lavoro.\\
+\item \textbf{Pianificazione e distribuzione dei ruoli}\\ 
+un punto fondamentale al quale bisogna prestare molta attenzione \`e la suddivisione dei ruoli e la sua gestione. Ogni componente dovr\`a assumere tutti i ruoli durante le varie fasi di progetto. Questo pu\`o portare ad una scarsa specializzazione dei membri dell'azienda, ma \`e un vincolo didattico indispensabile.
+\item \textbf{Mancanza del personale}\\
+essendo l'azienda formata da sei membri, nell'eventualit\`a che un membro non possa pi\`u partecipare alle attivit\`a di progetto, c'\`e un possibile rischio che l'azienda abbia un numero insufficiente di persone per continuare il lavoro sotto le ipotesi e le stime preventivate. In questo caso, l'azienda WebShape porter\`a comunque a termine il suo lavoro.\\
+\item \textbf{Compatibilit\`a e portabilit\`a del prodotto}\\
+il prodotto finale, come da Requisiti, deve essere funzionante sui pi\`u moderni browser in circolazione. Questo per\`o \`e un fatto a discrezione dell'utente finale, il quale deve essere consapevole e informato che il prodotto non \`e retrocompatibile e quindi anche la portabilit\`a \`e a sua discrezione.
+\item \textbf{Funzionalit\`a del prodotto}\\
+essendo il prodotto finale utilizzato da un qualsiasi tipo di utente finale, \`e necessario prestare attenzione a come il prodotto si presenta, rendendo l'accessibilit\`a a tutte le sue funzioni semplice e immediata.
+\end{itemize}			
+
 da completare\\
 
 \end{document}
